--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
   </style>
   <script src="js/p5.js"></script>
   <script src="js/p5.sound.min.js"></script>
-  <script src="js/p5.js"></script>
+  <script src="js/arraypractice.js"></script>
 </head>
 
 <body>
   <main>
-    helllllooo ahhahahaha
   </main>
 </body>
 
