--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <body>
     <a-scene id="vrScene">
       <a-assets>
-          <a-asset-item id="body-obj" src="obj/structureScan.obj"></a-asset-item>
-          <a-asset-item id="body-mtl" src="mtl/structureScan.mtl"></a-asset-item>
+          <a-asset-item id="body-obj" src="structureScan.obj"></a-asset-item>
+          <a-asset-item id="body-mtl" src="structureScan.mtl"></a-asset-item>
       </a-assets>
 
       <a-entity  id="body-model" position="-1 0 -3.5" obj-model="obj: #body-obj; mtl: #body-mtl"></a-entity>
