--- a/index.html
+++ b/index.html
@@ -51,10 +51,14 @@
       <img id="skintexture3" src="images/skintexture3.jpg">
       <img id="squiggle" src="images/squiggle.png">
       <img id="backskin" src="images/backskin.jpg">
+      <img id="tree5" src="images/tree5.jpg">
+      <img id="tree6" src="images/tree6.jpg">
+      <img id="tree7" src="images/tree7.jpg">
 
       <video id="cityvid" autoplay loop="true" src="video/city.mp4"></video>
       <video id="mountain" autoplay loop="true" src="video/mountain.mp4"></video>
       <video id="fabric" autoplay loop="true" src="video/fabric_1.mp4"></video>
+      <video id="skyvid" autoplay loop="true" src="video/skyvid.mp4"></video>
 
 
       <a-asset-item id="tower-obj" src="models/model.obj"></a-asset-item>
@@ -97,6 +101,25 @@
       <a-asset-item id="squiggle-mtl" src="models/squiggle.mtl"></a-asset-item>
       <a-asset-item id="backskin-obj" src="models/backskin.obj"></a-asset-item>
       <a-asset-item id="backskin-mtl" src="models/backskin.mtl"></a-asset-item>
+      <a-asset-item id="tree5-obj" src="models/tree5.obj"></a-asset-item>
+      <a-asset-item id="tree5-mtl" src="models/tree5.mtl"></a-asset-item>
+      <a-asset-item id="tree6-obj" src="models/tree6.obj"></a-asset-item>
+      <a-asset-item id="tree6-mtl" src="models/tree6.mtl"></a-asset-item>
+      <a-asset-item id="tree7-obj" src="models/tree7.obj"></a-asset-item>
+      <a-asset-item id="tree7-mtl" src="models/tree7.mtl"></a-asset-item>
+      <a-asset-item id="tree8-obj" src="models/tree8.obj"></a-asset-item>
+      <a-asset-item id="tree8-mtl" src="models/tree8.mtl"></a-asset-item>
+      <a-asset-item id="tree9-obj" src="models/tree9.obj"></a-asset-item>
+      <a-asset-item id="tree9-mtl" src="models/tree9.mtl"></a-asset-item>
+      <a-asset-item id="tree10-obj" src="models/tree10.obj"></a-asset-item>
+      <a-asset-item id="tree10-mtl" src="models/tree10.mtl"></a-asset-item>
+      <a-asset-item id="tree11-obj" src="models/tree11.obj"></a-asset-item>
+      <a-asset-item id="tree11-mtl" src="models/tree11.mtl"></a-asset-item>
+      <a-asset-item id="tree12-obj" src="models/tree12.obj"></a-asset-item>
+      <a-asset-item id="tree12-mtl" src="models/tree12.mtl"></a-asset-item>
+      <a-asset-item id="tree13-obj" src="models/tree13.obj"></a-asset-item>
+      <a-asset-item id="tree13-mtl" src="models/tree13.mtl"></a-asset-item>
+
 
 s
     </a-assets>
@@ -173,6 +196,39 @@ material="src: #headstand">
 </a-entity>
 <a-entity <a-entity="" obj-model="obj: models/tree4.obj" position="-8.45034 12.09252 46.41649" rotation="3.3563867638763627 -99.3927075947293 -5.058071415414907" scale="5.06151 9.59633 7.35151" material="src:#tree4">
 </a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree5.obj" position="-28.65313 -1.32224 -49.6499" rotation="-3.8760594840600193 -98.04969452294264 -0.693278932108296" scale="0.003 0.003 0.003" material="src: #tree5">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree5.obj" position="-68.6281 1.66126 51.98424" rotation="-3.8760594840600193 -98.04969452294264 -1" scale="0.002 0.005 0.002" material="src: #tree5">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree5.obj" position="133.62687 -4.71415 -6.9821" rotation="-2.6373247309871792 -63.69743695807902 -3.0120391290027375" scale="0.002 0.003 0.002" material="src:#tree5">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree6.obj" position="-20.68257 -2.46243 -94.26656" rotation="-3.8760594840600193 -173.03611891848428 -0.693278932108296" scale="0.003 0.003 0.003" material="src:#tree6">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree7.obj" position="114.03224 -2.51612 51.7177" rotation="-3.8760594840600193 -173.03611891848428 -0.693278932108296" scale="1.3 1.3 1.3" material="src: #tree7; color: #00ff00">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree7.obj" position="-88.39126 0.42514 -34.68758" rotation="-3.8760594840600193 -173.03611891848428 -0.693278932108296" scale="" material="src: #tree7; color: #00ff00">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree8.obj" position="-143.20331 3.78258 57.90062" rotation="2.1640615922091193 -173.10888455846586 -0.6921330165180345" scale="0.73762 0.73762 0.73762" material="src: #tree7; color: #00ff00">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree8.obj" position="184.24472 -5.95659 -51.24473" rotation="2.1640615922091193 -123.02091410812932 -0.6921330165180345" scale="0.5 0.5 0.5" material="src:#tree7; color: #00ff00">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree8.obj" position="-79.32079 -1.27379 -134.20015" rotation="2.1640615922091193 -72.54677010387458 -0.6921330165180345" scale="0.4 0.6 0.4" material="src:#tree7; color: #00ff00">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree9.obj" position="-141.09872 6.10554 -1.63436" rotation="2.164 -72.547 -0.6921330165180345" scale="8 10.67 8" material="src:#tree7; color: #3adc23" visible="">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree9.obj" position="206.13311 6.12644 51.48435" rotation="2.164 -72.547 -0.6921330165180345" scale="17.97643 33.76517 17.97643" material="src:#tree7; color: #3adc23" visible="">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree9.obj" position="94.03509 0.55674 -162.29554" rotation="2.1640615922091193 -46.46343943833898 -0.6921330165180345" scale="21.52643 35 29.44643" material="src:#tree7; color: #3adc23" visible="">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree10.obj" position="-184.34165 -3.39248 -102.42928" rotation="0.13808282862652838 57.79883645720719 2.267766953127798" scale="1 2 1" material="src: #tree7; color: #3adc23" visible="">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree11.obj" position="28.78735 -3.39248 170.96379" rotation="0.13808282862652838 57.79883645720719 2.267766953127798" scale="" material="src:#tree7; color: #3adc23" visible="">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree12.obj" position="136.79102 -4.15094 -114.49709" rotation="0.13808282862652838 57.79883645720719 2.267766953127798" scale="" material="src:#tree7; color: #3adc23" visible="">
+</a-entity>
+<a-entity <a-entity="" obj-model="obj: models/tree13.obj" position="-82.57066 -8.33668 210.35222" rotation="0.12375888374825782 -115.60855911252186 -2.268339910922929" scale="1.5 2.5 1" material="src:#tree7; color: #3adc23" visible="">
+</a-entity>
+
 
 <!-- <a-entity <a-entity="" obj-model="obj: models/rainbow.obj" position="9.2271 -12.166 -1.94932" rotation="11.356596457288047 123.54001387051784 6.63313239422954" scale="19.04993 10.07025 14.19557" material="src: #rainbow">
 </a-entity> -->
@@ -427,10 +483,14 @@ s
 <!-- // BACKGROUND 360 LOAD -->
 
 <a-entity geometry="primitive: plane" scale="35.95246 35.95246 35.95246" position="-4.557 9.331 -77.970" material="shader: gif; src: #cloth; alphaTest: 0.5"></a-entity>
-<a-sky color="#42bbd6" material="color: #42bbd6" geometry=""></a-sky>
 
+<a-video src="#skyvid" width="9" height="20" position="-183.65311 43.00922 -21.34535" material="" geometry="" rotation="0 90 -90" scale="11.3 15.67276 11.3"></a-video>
+<a-video src="#skyvid" width="9" height="20" position="32.06419 43 -180.29389" material="" geometry="" rotation="0 0 -90" scale="11.3 15.67276 11.3"></a-video>
+<a-video src="#skyvid" width="9" height="20" position="26.32441 50.62097 179.96712" material="" geometry="" rotation="0 0 90" scale="11.3 15.673 11.3"></a-video>
+<a-video src="#skyvid" width="9" height="20" position="217.21744 10 -10.66544" material="" geometry="" rotation="0 90 -90" scale="11.3 15.67276 11.3"></a-video>
 
-<!-- <a-videosphere src="#city"></a-videosphere> -->
+<!-- <a-sky color="#df8439" material="color: #df8439" geometry=""></a-sky> -->
+<a-videosphere src="#skyvid"></a-videosphere>
 
 </a-scene>
 </body>
