--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ event-set__enterTxt="_event: mouseenter; _target: #sit-model; visible: true"
 event-set__leaveTxt="_event: mouseleave; _target: #sit-model; visible: false"
 event-set__enterBox="_event: mouseenter; _target: #script4-model; opacity: 0"
 event-set__leaveBox="_event: mouseleave; _target: #script4-model; opacity: 1" >
-<a-entity id="sit-model" visible="" position="-9.41066 34.65112 -25.74157" scale="4.07162 4.07162 4.07162" rotation="-5.866514864344499 -80.58880571633081 15.902443603856" obj-model="obj: models/sit.obj" material="src:#sit"></a-entity>
+<a-entity id="sit-model" visible="false" position="-9.41066 34.65112 -25.74157" scale="4.07162 4.07162 4.07162" rotation="-5.866514864344499 -80.58880571633081 15.902443603856" obj-model="obj: models/sit.obj" material="src:#sit"></a-entity>
 </a-box>
 
 
