--- a/index.html
+++ b/index.html
@@ -194,6 +194,18 @@ rotation="-1.3796823706750223 -106.43361 0.6749442826641098"
 scale="6.43151 7.89633 6.43151"
 material="src: #headstand">
 </a-entity> -->
+
+
+
+<a-entity text-geometry="value: Wisdom" :="" bold="" position="-39.02211 0.15187 -36.74834" material="color: #f048d1" scale="4 4 4 " rotation="0 67.082 0"></a-entity>
+<a-entity text-geometry="value: Harmony" :="" bold="" position="5.94448 -1.06263 -24.49376" material="color: #a6a832" scale="2.8 2.8 2.8" rotation="0 -15.352977078325537 0"></a-entity>
+<a-entity text-geometry="value: Eternal" :="" bold="" position="-33.07022 -0.11921 19.84616" material="color: #3af026" scale="2.8 2.8 2.8" rotation="0 126.03581802610769 0"></a-entity>
+<a-entity text-geometry="value: Peace" :="" bold="" position="2.35963 1.05738 26.53573" material="color: #2522f0" scale="2.5 2.5 2.5" rotation="4.114409926834441 143.93387363040435 -0.37929806037660496"></a-entity>
+
+
+
+
+
 <a-entity <a-entity="" obj-model="obj: models/clothface.obj" position="70.98791 21.2567 -27.05876" rotation="57.09008766463036 -133.2871718812834 -50.27761948052487" scale="0.49961 0.75641 0.82372" material="src: #clothface; alphaTest: 0.23">
 </a-entity>
 <a-entity <a-entity="" obj-model="obj: models/cloth2.obj" position="2.66312 15.84328 38.37559" rotation="-7.085196094587761 -128.38609090173435 7.186609624325916" scale="0.45947 1.24958 0.66736" material="src: #cloth2 ; alphaTest: 1">
