--- a/index.html
+++ b/index.html
@@ -178,12 +178,13 @@ scale="0.57569 0.57569 0.57569"
 
 <a-entity <a-entity="" obj-model="obj: models/bed.obj" position="-152.89923 16.72671 -139.87398" rotation="-1.65967 -89.918277494446 0.8009949975928908" scale="202.66923 13.13883 283.01961" material="src:#bed">
 </a-entity>
-
 <a-entity <a-entity="" obj-model="obj: models/land.obj" position="21.87991 -100.30718 -332.15325" rotation="1.733770288065871 -175.49639969077603 -0.6245239966925973" scale="2.38 2.38 2.38" material="src: #cloth2">
 </a-entity>
 <a-entity <a-entity="" obj-model="obj: models/land.obj" position="27.85609 -27.50624 185.04419" rotation="1.733770288065871 -175.49639969077603 -0.6245239966925973" scale="2.21 1.96 2.38" material="src:#cloth2">
 </a-entity>
+<a-entity <a-entity="" obj-model="obj: models/land.obj" position="-223.00944 -60.333 -27.63279" rotation="-4.605434757261556 -179.74258991049058 -0.2807493196141034" scale="0.86 2.2 2.49261" material="src: #cloth2">
 </a-entity>
+
 
 
 
